# xkaapi

./: .gitignore  .mailmap  ANNOUNCE  AUTHORS  AUTHORS.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  ChangeLog  DEVELOPERS  DEVELOPERS.txt  DOC_GETENV  INSTALL  INSTALL.txt  LICENCE  Makefile  Makefile.am  NEWS  README  README.devel  README.kcomputer  README.txt  TODO  atha.pc.in  atha1.pc  atha1.pc.in  bootstrap  configure.ac  kaapi.pc.in  kaapic.pc.in  kaapif.pc.in  kaapixx.pc.in  kastl.pc.in  specs.tex  xkaapi.pc.in
api/: Makefile.am  atha_array.h  atha_format.h  athapascan-1.h  athapascan_closure.h  athapascan_closure_gen.m4  athapascan_fork.h  athapascan_fork_gen.m4  check-headers.am  ka_api_clo.h  ka_api_clo.m4  ka_api_fork.h  ka_api_fork.m4  ka_api_format.cpp  ka_api_kaapi.cpp  ka_component.cpp  ka_component.h  ka_debug.h  ka_init.h  ka_logfile.cpp  ka_parser.cpp  ka_properties.cpp  ka_timer.cpp  ka_timer.h  kaapi++  kaapi++.h  m4_generator  m4_macros
api-atha/: CMakeLists.txt  Makefile.am  atha_api2_clo.h  atha_api2_clo.m4  atha_api2_fork.h  atha_api2_fork.m4  atha_component.cpp  atha_component.h  atha_debug.h  atha_error.cpp  atha_error.h  atha_format.cpp  atha_format.h  atha_init.cpp  atha_init.h  atha_kaapi.cpp  atha_kaapi.cpp.in  atha_kaapi2.cpp  atha_logfile.cpp  atha_monotonic.cpp  atha_parser.cpp  atha_parser.h  atha_properties.cpp  atha_properties.h  atha_stream.cpp  atha_stream.h  atha_timer.cpp  atha_timer.h  atha_types.h  athapascan-1  athapascan-1.h  athapascan-2  athapascan-2.h  athapascan_closure.h  athapascan_closure_gen.m4  athapascan_fork.h  athapascan_fork_gen.m4  ka_api_clo.h  ka_api_fork.h  ka_api_format.cpp  (+9 more)
api-atha/check/: atha1_h_header.cpp
api/atha/: Makefile.am  atha_array.h  atha_format.h  atha_kaapi.cpp  atha_monotonic.cpp  atha_stream.cpp  atha_stream.h  athapascan-1  athapascan-1.h  athapascan_closure.h  athapascan_closure_gen.m4  athapascan_fork.h  athapascan_fork_gen.m4  m4_generator  m4_macros
api/fortran/: Makefile.am  kaapif.h  kaf_getargs.f  kaf_impl.h  kaf_init.c  kaf_sched.c  kaf_task.c
api/kaapi/: Makefile.am
api/kaapic/: Makefile.am  gen_adaptive_switch.c  gen_dfg_switch.c  kaapic.c  kaapic.h  kaapic_adaptive_switch.h  kaapic_adaptive_switch.m4  kaapic_adaptive_switch_ull.h  kaapic_adaptive_switch_ull.m4  kaapic_alloca.c  kaapic_dfg_switch.h  kaapic_dfg_switch.m4  kaapic_dfg_wh_switch.m4  kaapic_foreach.c  kaapic_foreach_attr.c  kaapic_foreach_docall.c  kaapic_foreach_docall_ull.c  kaapic_foreach_ull.c  kaapic_foreach_withformat.c  kaapic_foreach_withformat_ull.c  kaapic_impl.h  kaapic_spawn.c  kaapic_spawn_attr.c  kaapic_work.c  kaapic_work_ull.c  m4_generator  m4_macros
api/kaapif/: Makefile.am  gen_adaptive_switch.c  gen_dfg_switch.c  kaapic.h  kaapif.c  kaapif.h  kaapif.inc.f90  kaapif.inc.f95  kaapif_adaptive_switch.h  kaapif_adaptive_switch.m4  kaapif_dfg_switch.h  kaapif_foreach.c  kaapif_inc.m4  kaapif_spawn.c  m4_generator  m4_macros
doc/: .gitignore  CMakeLists.txt  Manual.tex  appendix.tex  cpp_api.tex  doxy.config  doxy.config.in  introduction.tex  kaapi-git.txt  low_api.tex  smpss_api.tex
examples/: CMakeLists.txt  Makefile.am  Makefile.examples.am  accumulate.am  accumulate_while_kastl.cpp  adaptive_with_dfg.c  array.am  bfs.am  branchbound.am  cilk.am  clement_problem.cpp  clement_problem_2.cpp  compile_heter.sh  count_concurrent.cpp  count_concurrent.h  cra_early_problem.cpp  cuda.am  dgemm_cblas.cpp  dgemm_kaapi.cpp  dgemm_kaapi_flat.cpp  fibo.am  fibo.c  fibo_adapt.c  fibo_apiatha.cpp  fibo_apiatha2.cpp  fibo_apiatha3.cpp  fibo_apikaapi.cpp  fibo_apikaapi_main.cpp  fibo_apikaapi_opt.cpp  fibo_atha.cpp  fibo_kaapixx.cpp  fibo_kaapixx_main.cpp  fibo_kaapixx_opt.cpp  fibo_kaapixx_sync.cpp  fibo_xkaapi.c  fiboseq.c  find.am  find_if.cpp  find_if.h  for_each.am  (+50 more)
imported-soft/: Makefile.am
kastl.wip/: CMakeLists.txt  Makefile.am  accumulate.cpp  accumulate.h  copy.cpp  copy.h  count.cpp  count.h  count_if.cpp  count_if.h  fill.cpp  fill.h  find_if.cpp  find_if.h  for_each.cpp  for_each.h  generate.cpp  generate.h  inner_product.cpp  inner_product.h  kaapi_utils.cpp  kaapi_utils.h  max_element.cpp  max_element.h  merge.cpp  merge.h  min_element.cpp  min_element.h  random.cpp  random.h  replace.cpp  replace.h  replace_copy.cpp  replace_copy.h  replace_copy_if.cpp  replace_copy_if.h  replace_if.cpp  replace_if.h  sort.cpp  sort.h  (+7 more)
network/: Makefile.am  kaapi_network.cpp  kanet_alloc.cpp  kanet_channel.cpp  kanet_channel.h  kanet_device.cpp  kanet_device.h  kanet_error.cpp  kanet_init.cpp  kanet_instr.cpp  kanet_instr.h  kanet_network.cpp  kanet_network.h  kanet_types.h  network_types.cpp
src/: CMakeLists.txt  Makefile.am  kaapi.h  kaapi.h.in  kaapi_affinity.h  kaapi_allocator.h  kaapi_atomic.h  kaapi_common.h  kaapi_compiler.h  kaapi_config.h.in  kaapi_cpuset.h  kaapi_data.h  kaapi_datastructure.h  kaapi_defs.h  kaapi_error.h  kaapi_event.h  kaapi_event_recorder.h  kaapi_format.h  kaapi_hashmap.h  kaapi_hws.h  kaapi_impl.h  kaapi_init.c  kaapi_kcomputerdefs.h  kaapi_machine.h  kaapi_memory.h  kaapi_network.h  kaapi_param.h  kaapi_partition.h  kaapi_private_structure.h  kaapi_sched.h  kaapi_staticsched.h  kaapi_task.c  kaapi_task.h  kaapi_tasklist.h  kaapi_time.c  kaapi_trace.h  kaapi_type.h  kaapi_type.h.in  kaapi_util.h  kaapi_ws_queue.h  (+1 more)
tests/: CMakeLists.txt  Makefile.am  atlocal.in  prod-cons.c  test_affinity.c  test_begend_parallel.c  test_cond2.c  test_cond3.c  test_cond4.c  test_create1.c  test_create2.c  test_key.c  test_main.cpp  test_main.h  test_multipleleave.cpp  test_mutex1.c  test_mutex2.c  test_mutex3.c  test_mutex4.c  test_mutex_trylock.c  test_once.c  test_pointer.cpp  test_signal.c  test_spawn.cpp  test_spawn_failed.cpp  test_spawn_failed2.cpp  test_steal1.c  test_steal2.c  test_steal3.c  test_task.h  testsuite-api-kaapic.at  testsuite-api-kaapif.at  testsuite-api-kaapixx.at  testsuite-examples.at  testsuite-installed.at  testsuite-kaapi.at  testsuite-libgomp-gcc.at  testsuite-libgomp.at  testsuite-libkaapi++.at  testsuite-libkaapic.at  (+3 more)
(+4763 files in other folders)
